--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 :root {
-  --color-background: #FDFDFD;
+  --color-background: #e2e2e2;
   --color-background-soft: #f8f8f8;
   --color-background-mute: #f2f2f2;
 
@@ -8,8 +8,7 @@
 
   --color-heading: #2c3e50;
   --color-text: #2c3e50;
-
-  --section-gap: 160px;
+  --page-width: min(1700px, 100%);;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -35,12 +34,26 @@
   margin: 0;
 }
 
+b {
+  font-weight: bold;
+}
+
+hr {
+  width: 100%;
+}
+
+h2 {
+  font-weight: bolder;
+}
+
 html, body {
   width: 100%;
   height: 100%;
 }
 
 body {
+  display: flex;
+  place-content: center;
   color: var(--color-text);
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
@@ -64,9 +77,19 @@ body {
 
 #app {
   display: flex;
-  flex-wrap: wrap;
-  /*place-items: center;*/
+  flex-direction: column;
+  place-items: center;
   width: 100%;
+}
+
+.page-inner {
+  max-width: var(--page-width);
+  width: var(--page-width);
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 a,
@@ -79,6 +102,7 @@ a,
 
 button {
   user-select: none;
+  cursor: pointer;
 }
 
 @media (hover: hover) {
@@ -87,18 +111,8 @@ button {
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-content: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-areas:
-      "topbar topbar topbar"
-      ".      main   .     "
-      "footer footer footer";
-      width: 100%;
+@media (max-width: 992px) {
+  :root {
+    --page-width: 100%;
   }
 }
