--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,7 +8,9 @@
 
   --color-heading: #2c3e50;
   --color-text: #2c3e50;
-  --page-width: min(1700px, 100%);;
+  --page-width-max: 1700px;
+  --page-width: min(var(--page-width-max), 100%);
+  --width-breakpoint: 992px;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -30,25 +32,18 @@
 *::after {
   text-overflow: ellipsis;
   box-sizing: border-box;
-  font-weight: normal;
-  margin: 0;
-}
-
-b {
-  font-weight: bold;
 }
 
 hr {
   width: 100%;
+  margin: 0;
 }
 
-h2 {
-  font-weight: bolder;
-}
-
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
+  margin: 0;
 }
 
 body {
@@ -92,17 +87,20 @@ img {
   max-height: 100%;
 }
 
-a,
-.teal {
-  text-decoration: none;
-  color: rgb(0, 145, 189);
-  transition: 0.4s;
-  padding: 3px;
-}
-
 button {
   user-select: none;
   cursor: pointer;
+}
+
+body::-webkit-scrollbar {
+  background: #e7e7e7;
+  width: 15px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #00b7bd;
+  border-radius: 10px;
+  box-shadow: inset 1px 1px 1px 0 rgba(255,255,255,0.5), inset -1px -1px 1px 0 rgba(0,0,0,0.5);
 }
 
 @media (hover: hover) {
@@ -111,8 +109,8 @@ button {
   }
 }
 
-@media (max-width: 992px) {
-  :root {
-    --page-width: 100%;
+@media (max-width: var(--width-breakpoint)) {
+  html {
+    font-size: 9pt;
   }
 }
