--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,5 +1,5 @@
 :root {
-  --color-background: #e2e2e2;
+  --color-background: #f5f5f5;
   --color-background-soft: #f8f8f8;
   --color-background-mute: #f2f2f2;
 
@@ -32,6 +32,19 @@
 *::after {
   text-overflow: ellipsis;
   box-sizing: border-box;
+  font-family:
+    Inter,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
 }
 
 hr {
@@ -52,19 +65,6 @@ body {
   color: var(--color-text);
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -90,6 +90,7 @@ img {
 button {
   user-select: none;
   cursor: pointer;
+  padding: 7px;
 }
 
 body::-webkit-scrollbar {
@@ -100,7 +101,7 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-thumb {
   background-color: #00b7bd;
   border-radius: 10px;
-  box-shadow: inset 1px 1px 1px 0 rgba(255,255,255,0.5), inset -1px -1px 1px 0 rgba(0,0,0,0.5);
+  box-shadow: inset 1px 1px 1px 0 rgba(255, 255, 255, 0.5), inset -1px -1px 1px 0 rgba(0, 0, 0, 0.5);
 }
 
 @media (hover: hover) {
