--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,7 +1,7 @@
 :root {
   --color-background: #f5f5f5;
-  --color-background-soft: #f8f8f8;
-  --color-background-mute: #f2f2f2;
+  --color-background-soft: #fafafa;
+  --color-background-mute: #e9e9e9;
 
   --color-border: rgb(60 60 60 / 29%);
   --color-border-hover: rgb(60 60 60 / 29%);
@@ -63,7 +63,7 @@ body {
   display: flex;
   place-content: center;
   color: var(--color-text);
-  background: var(--color-background);
+  background: var(--color-background-mute);
   transition: color 0.5s, background-color 0.5s;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -110,15 +110,15 @@ button {
     scrollbar-color: #e7e7e7 #00b7bd;
   }
 } */
-
+/* 
 @supports selector(::-webkit-scrollbar) {
+  body::-webkit-scrollbar-thumb {
+    background: unset;
+    border-radius: 10px;
+  }
+
   body::-webkit-scrollbar {
     background: #e7e7e7;
     width: 15px;
   }
-
-  body::-webkit-scrollbar-thumb {
-    background-color: #00b7bd;
-    border-radius: 10px;
-  }
-}
+} */
