--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,6 +1,6 @@
 :root {
   --color-background: #f5f5f5;
-  --color-background-soft: #fafafa;
+  --color-background-soft: #f7f7f7;
   --color-background-mute: #e9e9e9;
 
   --color-border: rgb(60 60 60 / 29%);
@@ -8,7 +8,7 @@
 
   --color-heading: #2c3e50;
   --color-text: #2c3e50;
-  --page-width-max: 1700px;
+  --page-width-max: 1600px;
   --page-width: min(var(--page-width-max), 100%);
   --width-breakpoint: 992px;
 }
@@ -26,6 +26,27 @@
     --color-text: var(rgb(235 235 235 / 64%));
   }
 } */
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  place-content: center;
+  color: var(--color-text);
+  transition: color 0.5s, background-color 0.5s;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(25deg, #4bf0d4, #1692be, #3a55cf);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 
 *,
 *::before,
@@ -45,29 +66,12 @@
     'Droid Sans',
     'Helvetica Neue',
     sans-serif;
+  text-underline-offset: 2px;
 }
 
 hr {
   width: 100%;
   margin: 0;
-}
-
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
-body {
-  display: flex;
-  place-content: center;
-  color: var(--color-text);
-  background: var(--color-background-mute);
-  transition: color 0.5s, background-color 0.5s;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 #app {
@@ -90,19 +94,15 @@ img {
 button {
   user-select: none;
   cursor: pointer;
-  padding: 7px;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: rgba(0, 145, 189, 0.2);
-  }
+a,
+button {
+  transition: 0.2s ease-in-out;
 }
 
-@media (max-width: var(--width-breakpoint)) {
-  html {
-    font-size: 9pt;
-  }
+a {
+  color: var(--color-text);
 }
 
 /* @supports (scrollbar-color: auto) {
