--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -105,6 +105,30 @@ a {
   color: var(--color-text);
 }
 
+input {
+  padding: 7px 4px;
+  border-radius: 4px;
+  border: 1px solid #AAA;
+  font-size: 1rem;
+}
+
+input[type=submit] {
+  width: fit-content;
+}
+
+input[name=search] {
+  background: url(/src/assets/search.svg) white no-repeat 5px 5px;
+  padding-left: 34px;
+}
+
+input:hover {
+  outline: 1px solid #6b6b6b;
+}
+
+input:focus {
+  outline: 1px solid #1a1a1a;
+}
+
 /* @supports (scrollbar-color: auto) {
   body {
     scrollbar-color: #e7e7e7 #00b7bd;
