--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -30,15 +30,20 @@
 
 html,
 body {
-  width: 100%;
   height: 100%;
+  width: 100%;
   scroll-behavior: smooth;
   margin: 0;
 }
 
+#app,
+.layout {
+  margin: 0px;
+  min-height: 100%;
+  width: 100%;
+}
+
 body {
-  display: flex;
-  place-content: center;
   color: var(--color-text);
   transition: color 0.5s, background-color 0.5s;
   text-rendering: optimizeLegibility;
@@ -47,6 +52,16 @@ body {
   background: linear-gradient(25deg, #4bf0d4, #1692be, #3a55cf);
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+#app,
+.layout {
+  width: 100%;
+  height: 100%;
+}
+
+.layout {
+  display: flex;
 }
 
 *,
@@ -75,23 +90,13 @@ hr {
   margin: 0;
 }
 
-#app {
-  display: flex;
-  flex-direction: column;
-  place-items: center;
-  width: 100%;
-}
-
-.page-inner {
-  max-width: var(--page-width);
-  width: var(--page-width);
-}
-
 img {
   max-width: 100%;
   max-height: 100%;
 }
 
+.clickable,
+input[type=submit],
 button {
   user-select: none;
   cursor: pointer;
@@ -102,17 +107,25 @@ button {
   transition: 0.1s ease-out;
 }
 
-a {
+.link-like {
+  padding: 0;
+  height: fit-content;
+  border: none;
+}
+
+a,
+.link-like {
   color: var(--color-text);
 }
 
 input {
   box-sizing: border-box;
   padding: 7px 4px;
-  border-radius: 4px;
   background: #FAFAFA;
   border: 1px solid #AAA;
   font-size: 1rem;
+  border-radius: 5px;
+  margin: 10px 0px 10px 0px;
 }
 
 input[name=search] {
@@ -138,6 +151,10 @@ input[name=search]:focus {
   background-color: #EDEDED;
   outline: 1px auto var(--active-color);
   border-color: transparent;
+}
+
+.underlined {
+  text-decoration: underline;
 }
 
 /* @supports (scrollbar-color: auto) {
