--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -1,3 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .fancy-button {
+    @apply bg-gradient-to-r from-teal-400 to-cyan-500 text-white font-bold px-6 py-3 rounded-lg shadow-md hover:shadow-md transition-transform transform hover:scale-105 hover:to-indigo-500;
+  }
+}
+
 :root {
   --color-background: #f5f5f5;
   --color-background-soft: #f7f7f7;
@@ -8,10 +18,10 @@
 
   --color-heading: #2c3e50;
   --color-text: #2c3e50;
-  --page-width-max: 1600px;
+  --page-width-max: 1500px;
   --page-width: min(var(--page-width-max), 100%);
   --width-breakpoint: 992px;
-  --active-color: #0099ff;
+  --active-link: #0099ff;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -95,68 +105,19 @@ hr {
 img {
   max-width: 100%;
   max-height: 100%;
+  user-select: none;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
 }
 
+a,
 .clickable,
 input[type='submit'],
 button {
-  user-select: none;
   cursor: pointer;
-}
-
-a,
-button {
-  transition: 0.1s ease-out;
-}
-
-.link-like {
-  padding: 0;
-  height: fit-content;
-  border: none;
-}
-
-a,
-.link-like {
-  color: var(--color-text);
-}
-
-input {
-  box-sizing: border-box;
-  padding: 7px 4px;
-  background: #fafafa;
-  border: 1px solid #aaa;
-  font-size: 1rem;
-  border-radius: 5px;
-  margin: 10px 0px 10px 0px;
-}
-
-input[name='search'] {
-  background: url(/src/assets/search.svg) white no-repeat 5px 5px;
-  padding-left: 34px;
-}
-
-input[name='search']:focus {
-  background-color: #ededed;
-  outline: 1px auto var(--active-color);
-}
-
-.custom-input {
-  margin: 8px 0px;
-}
-
-.custom-input:hover {
-  background-color: #ededed;
-  border: 1px auto #4c5961;
-}
-
-.custom-input:focus {
-  background-color: #ededed;
-  outline: 1px auto var(--active-color);
-  border-color: transparent;
-}
-
-.underlined {
-  text-decoration: underline;
 }
 
 /* @supports (scrollbar-color: auto) {
